terraform/module/security-group/main.tf
resource "aws_security_group" "this" {
  name        = "secure-sg"
  description = "Restricted SG"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH Access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ssh_ip]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 53
    to_port     = 53
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "secure-sg"
    Owner       = var.owner
    DM          = var.dm
    Department  = var.department
    ProjectName = var.project_name
    EndDate     = var.end_date
    BU          = var.bu
  }
}
